deployment_v1.yaml

# kubectl run test --image=nginx --port=80 --dry-run=client -o yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: demo
  labels:
    depl: nginx-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app    
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.1
        ports:
        - name: http
          containerPort: 80
