webapp_color.yaml

# kubectl run test --image=nginx --port=80 --dry-run=client -o yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-deployment
  namespace: demo
  labels:
    depl: color-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: color-app
  template:
    metadata:
      labels:
        app: color-app    
    spec:
      containers:
      - name: color
        image: kodekloud/webapp-color
        ports:
        - name: http
          containerPort: 8080
