cl-service.yaml
# kubectl create service clusterip nginx-cl-svc --tcp=80:80 --dry-run=client -o yaml > cl-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-cl-svc
  name: nginx-cl-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-app
  type: ClusterIP
