my-nginx-svc.yaml
# kubectl create service nodeport nginx-svc --tcp=30085:80 --dry-run=client -o yaml > service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-nginx-app
  name: my-nginx-svc
  namespace: default
spec:
  ports:
  - name: 32085-8080
    port: 8080
    nodePort: 32085
    protocol: TCP
    targetPort: 8080
  selector:
    app: my-nginx-app
  type: NodePort
