service.yaml
# kubectl create service nodeport nginx-svc --tcp=30085:80 --dry-run=client -o yaml > service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-svc
  name: nginx-svc
spec:
  ports:
  - name: 30085-80
    port: 30085
    nodePort: 30085
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-app
  type: NodePort
