webapp_lb_svc.yaml
# kubectl create service nodeport nginx-svc --tcp=30085:80 --dry-run=client -o yaml > service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: color-app
  name: color-lb-svc
  namespace: demo
spec:
  ports:
  - name: lb-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: color-app
  type: LoadBalancer
