ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-in
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pieter
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /nginx
        pathType: Exact
