my-nginx-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-in
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kubernetes
    http:
      paths:
      - backend:
          service:
            name: my-nginx-svc
            port:
              number: 8080
        path: /my-nginx
        pathType: Exact
