webapp-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-in
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pieter
    http:
      paths:
      - backend:
          service:
            name: color-svc
            port:
              number: 8080
        path: /color
        pathType: Exact
        # pathType: Prefix
