webapp-lb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo

---
# kubectl run test --image=nginx --port=80 --dry-run=client -o yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-deployment
  namespace: demo
  labels:
    depl: color-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: color-app
  template:
    metadata:
      labels:
        app: color-app    
    spec:
      containers:
      - name: color
        image: kodekloud/webapp-color:v2
        # image: kodekloud/webapp-color:v2
        ports:
        - name: http
          containerPort: 8080

---
# kubectl create service nodeport nginx-svc --tcp=30085:80 --dry-run=client -o yaml > service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: color-svc
  name: color-svc
  namespace: demo
spec:
  ports:
  - name: 30080-8080
    port: 8080
    nodePort: 30080
    protocol: TCP
    targetPort: 8080
  selector:
    app: color-app
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-in
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: lnx
    http:
      paths:
      - backend:
          service:
            name: color-svc
            port:
              number: 8080
        path: /color
        pathType: Exact
        # pathType: Prefix

---
# kubectl create service nodeport nginx-svc --tcp=30085:80 --dry-run=client -o yaml > service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: color-app
  name: color-lb-svc
  namespace: demo
spec:
  ports:
  - name: lb-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: color-app
  type: LoadBalancer
